--- a/_notebooks/2021-04-18-Resident-Evil-Detector.ipynb
+++ b/_notebooks/2021-04-18-Resident-Evil-Detector.ipynb
@@ -17,6 +17,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "!pip install -Uqq fastbook\n",
+    "import fastbook\n",
+    "fastbook.setup_book()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
