Added new changes to MNist

--- a/_notebooks/2021-05-08-The-MNIST-Experiment.ipynb
+++ b/_notebooks/2021-05-08-The-MNIST-Experiment.ipynb
@@ -15,7 +15,7 @@
     "- badges: true\n",
     "- comments: false\n",
     "- categories: [fastai, vision]\n",
-    "- hide: true\n",
+    "- hide: false\n",
     "- search_exclude: true"
    ]
   },
@@ -265,10 +265,12 @@
     }
    ],
    "source": [
+    "#\n",
     "# This grid will be used for tracking our results from processing the images\n",
     "training_results = create_grid(len((path/'training').ls().sorted()))\n",
     "\n",
-    "# First lets grab all of our images and store the corresponding paths in a list so that we can read them\n",
+    "# First lets grab all of our images and store the corresponding paths in \n",
+    "# a list so that we can read them\n",
     "training_folders = (path/'training').ls().sorted()\n",
     "training_paths = []\n",
     "\n",
@@ -278,8 +280,9 @@
     "# Index for our grid\n",
     "index = 0\n",
     "\n",
-    "# We need to loop over the different paths and then grab the paths to all of our images sorted\n",
-    "# so that we can load the image into a tensor we can use to pass it to model\n",
+    "# We need to loop over the different paths and then grab the paths to \n",
+    "# all of our images sorted so that we can load the image into a \n",
+    "# tensor we can use to pass it to model\n",
     "for digits in training_folders:\n",
     "    \n",
     "    # Grab the digit label in the path of the folder\n",
@@ -298,8 +301,9 @@
     "\n",
     "train_y = train_y.type(torch.LongTensor)\n",
     "\n",
-    "# We can check the our array of paths tensor shape should be (total number images in all folders)\n",
-    "training_results"
+    "# We can check the our array of paths tensor shape should be \n",
+    "# (total number images in all folders)\n",
+    "training_results\n"
    ]
   },
   {
@@ -329,12 +333,14 @@
     }
    ],
    "source": [
+    "#\n",
     "# Final we should be able to open the image and store it as a tensor\n",
     "train_data = torch.stack([tensor(Image.open(o)) \n",
     "                             for o in training_paths.sorted()]).float()/255\n",
     "    \n",
-    "# We can check the our tensor shape should be (total number images, with a 28 by 28 size) Rank 3 tensor\n",
-    "train_data.shape, train_y.shape"
+    "# We can check the our tensor shape should be \n",
+    "# (total number images, with a 28 by 28 size) Rank 3 tensor\n",
+    "train_data.shape, train_y.shape\n"
    ]
   },
   {
@@ -389,7 +395,17 @@
     "    index+=1\n",
     "\n",
     "valid_y = valid_y.type(torch.LongTensor)\n",
-    "validation_results"
+    "validation_results\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now perform the same functionality as in the training set:\n",
+    "\n",
+    "* Open the images as a tensor\n",
+    "* Convert the numbers to be between 0 and 1"
    ]
   },
   {
@@ -1345,7 +1361,6 @@
     }
    ],
    "source": [
-    "#hide_output\n",
     "a_digit = train_data[51000,:,6:24]\n",
     "df = pd.DataFrame(a_digit)\n",
     "df.style.set_properties(**{'font-size':'6pt'}).background_gradient('Greys')"
