Added new changes to MNist

--- a/_notebooks/2021-05-08-The-MNIST-Experiment.ipynb
+++ b/_notebooks/2021-05-08-The-MNIST-Experiment.ipynb
@@ -15,7 +15,7 @@
     "- badges: true\n",
     "- comments: false\n",
     "- categories: [fastai, vision]\n",
-    "- hide: false\n",
+    "- hide: true\n",
     "- search_exclude: true"
    ]
   },
