Fixed issues with images code and added new references and links

--- a/_notebooks/2021-05-08-The-MNIST-Experiment.ipynb
+++ b/_notebooks/2021-05-08-The-MNIST-Experiment.ipynb
@@ -100,7 +100,7 @@
     "\n",
     "I’m so excited to share this with you and I want to say that doing this small project was and still is **one of my favorite projects I have ever done**.\n",
     "\n",
-    "Now before we start I should say, I had some issues with math, I forgot a lot of calculus and had to go back and relearn some concepts. In an effort to help other people that might have had the same struggle I'll be writing another post to cover some small, coding and calculus concepts that made this exercise much easier to resolve.\n",
+    "Now before we start I should say, I had some issues with math, I forgot a lot of calculus and had to go back and review some concepts, including some [calculus (derivatives)](https://youtube.com/playlist?list=PLZHQObOWTQDMsr9K-rj53DwVRMYO3t5Yr), [Deep Learning parameters and hyperparameters](https://machinelearningmastery.com/difference-between-a-parameter-and-a-hyperparameter/) and some FastAI, pytorch, python functions that made the exercise easier to practice.\n",
     "\n",
     "Finally I would like to say this exercise is based on (FastAI Course)[course.fast.ai] Lesson 4, in case you want to review some further details regarding this and other exercises.\n",
     "\n",
@@ -1555,9 +1555,10 @@
    },
    "outputs": [],
    "source": [
+    "#\n",
     "# This accuracy function will calculate the accuracy comparing the max values of the\n",
-    "# inputs using argmax to get the max values of the passed inputs and then checking it agaist the\n",
-    "# targets and finally calculate the mean\n",
+    "# inputs using argmax to get the max values of the passed inputs and then checking it \n",
+    "# agaist the targets and finally calculate the mean\n",
     "\n",
     "def batch_accuracy(xb, yb):\n",
     "    xb = np.argmax(xb, 1)\n",
@@ -1598,8 +1599,8 @@
     "```\n",
     "\n",
     "1. Layer that performs a matrix multiplication using the values of the image we are trying to predict times the layer 1 weights then adds it up with a bias.\n",
-    "2. Rectifier linear unity which will max the result of the previous operation layer.\n",
-    "3. Another layer which will perform a matrix multiplication with the result of the previous operation times the weights of layer 2 and adds it up again to bias of layer 2.\n"
+    "2. (Activation) Rectifier linear unity which will basically change any negative result from the previous layer into a 0.\n",
+    "3. Final layer which will perform a matrix multiplication with the result of the previous operation times the weights of layer 2 and adds it up again to bias of layer 2.\n"
    ]
   },
   {
@@ -3736,9 +3737,10 @@
     "\n",
     "### Resources and References\n",
     "\n",
-    "* https://course.fast.ai/videos/?lesson=4\n",
-    "* https://docs.python.org/3/tutorial/datastructures.html#tuples-and-sequences\n",
-    "* https://machinelearningmastery.com/difference-between-a-parameter-and-a-hyperparameter/"
+    "* Jeremy Howard, Rachel Thomas and Sylvain Gugger, FastAI Course, https://course.fast.ai/videos/?lesson=4\n",
+    "* Grant Sanderson, The Essence of Calculus, 3blue1brown, https://youtube.com/playlist?list=PLZHQObOWTQDMsr9K-rj53DwVRMYO3t5Yr\n",
+    "* Tuples https://docs.python.org/3/tutorial/datastructures.html#tuples-and-sequences\n",
+    "* Jason Brownlee, What is the Difference Between a Parameter and a Hyperparameter?, Machine Learning Mastery, Available from https://machinelearningmastery.com/difference-between-a-parameter-and-a-hyperparameter/"
    ]
   },
   {
