Fixed some changes to blog post

--- a/_notebooks/2021-05-08-The-MNIST-Experiment.ipynb
+++ b/_notebooks/2021-05-08-The-MNIST-Experiment.ipynb
@@ -102,7 +102,7 @@
     "\n",
     "Now before we start I should say, I had some issues with math, I forgot a lot of calculus and had to go back and review some concepts, including some [calculus (derivatives)](https://youtube.com/playlist?list=PLZHQObOWTQDMsr9K-rj53DwVRMYO3t5Yr), [Deep Learning parameters and hyperparameters](https://machinelearningmastery.com/difference-between-a-parameter-and-a-hyperparameter/) and some FastAI, pytorch, python functions that made the exercise easier to practice.\n",
     "\n",
-    "Finally I would like to say this exercise is based on (FastAI Course)[course.fast.ai] Lesson 4, in case you want to review some further details regarding this and other exercises.\n",
+    "Finally I would like to say this exercise is based on [FastAI Course Lesson 4](https://course.fast.ai/videos/?lesson=4). in case you want to review some further details regarding this and other exercises.\n",
     "\n",
     "### Data Structure Review\n",
     "First things first, let's unpack the data and review it. FastAI already has a way for us to download the MNIST data set in full. We will download it, unpack it, and see its contents.\n",
@@ -235,7 +235,7 @@
     "\n",
     "Here are the criteria for building our script:\n",
     "\n",
-    "1. Grab the images within our training and testing folders\n",
+    "1. Grab the images within our training and testing folders.\n",
     "1. Traverse each folder structure in order to grab all the digit folders within.\n",
     "1. Grab the images within each digit folder and store them in a way we can label and use them for training and validation.\n",
     "1. Use the folder names to generate our labels for each of the images\n"
@@ -358,9 +358,9 @@
     "\n",
     "Once we have processed the training data set we can perform the same routine to the validation data set so that we can:\n",
     "\n",
-    "1. Collecto all the validation set images\n",
-    "1. Generate labels for all the images\n",
-    "1. Process the images in a way our model can read it\n"
+    "1. Collect all the validation set images.\n",
+    "1. Generate the label data.\n",
+    "1. Process the images in a way our model can read it.\n"
    ]
   },
   {
@@ -418,8 +418,8 @@
    "source": [
     "We can now perform the same functionality as in the training set:\n",
     "\n",
-    "* Open the images as a tensor\n",
-    "* Convert the numbers to be between 0 and 1"
+    "* Open the images as a tensor.\n",
+    "* Convert the numbers to be between 0 and 1."
    ]
   },
   {
@@ -453,7 +453,7 @@
     "\n",
     "### Data Review\n",
     "\n",
-    "When dealing with images something that really helped me was to visualize what was going to happen and experiment a little with the data. Jeremy did something similar in the course where he opened the image so we can see the underlying data and try to understand and figure out how the machine would process it.\n",
+    "When dealing with images, something that really helped me was to visualize what was going to happen and experiment a little with the data. Jeremy did something similar in the course where he opened the image so we can see the underlying data and try to understand and figure out how the machine would process it.\n",
     "\n",
     "So in the next cell we will be grabbing one of the images in the training data, open it with pandas and render the contents using a data frame grid.\n",
     "\n"
@@ -1389,14 +1389,23 @@
    ]
   },
   {
+   "source": [
+    "After seeing how the data is composed, we can see that:\n",
+    "* Each image has numbers from 0 to 1 that represent each of the pixels in the image.\n",
+    "* We can use those pixel numbers and train a neural network to be able to identify the different digits.\n",
+    "\n",
+    "In order to use this data we will need to perform 1 more transformation..."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
     "### Tuples and Data Sets\n",
-    "In the next section we will transform the training images like the one above into a vector by stacking all the pixels into 1 big column, and, create a [tuple](https://docs.python.org/3/tutorial/datastructures.html#tuples-and-sequences) with the vectorized image and the corresponding label.\n",
-    "\n",
-    "Finally we will create a list of those tuples which will give us our 2 final data sets.\n"
+    "We need to transform the training images like the one above into a vector by stacking all the pixels into 1 big column, and, create a [tuple](https://docs.python.org/3/tutorial/datastructures.html#tuples-and-sequences) with the vectorized image and the corresponding label. We need to pass a list of tuples to the data loaders class which FastAI uses to create the training batches used when training a model.\n"
    ]
   },
   {
@@ -1442,7 +1451,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now see that the same image above has been transformed into a vector and is followed by the corresponding label at the end of the tuple. (The numbers bellow represent the image above)"
+    "Now the same image above has been transformed into a vector and is followed by the corresponding label at the end of the tuple. (The numbers below represent the image above)"
    ]
   },
   {
@@ -1507,11 +1516,11 @@
     "\n",
     "### Data Loaders\n",
     "\n",
-    "FastAI has a class that will help us perform the training and validation of our model by generating a mini batch of data that will be processed by the model when training.\n",
+    "The DataLoader class in FastAI is a class that will help us generate a mini batch of training and validation data that will be processed by the model in each epoch.\n",
     "\n",
-    "The Data Loader class can be used even if we are not using a fully developed *cnn_learner* from FastAI, like, when we are defining our learner manually.\n",
+    "The Data Loader class can be used even if we are not using a fully developed *cnn_learner* from FastAI, like, when we are customizing our learner or defining a model from scratch.\n",
     "\n",
-    "Something I thought was very cool was that this decoupling of the architecture helps when people want to build a customized model; we have libraries, classes or pieces of code we can reuse. We don't have to reinvent the wheel to create a class or method that help us load our data to our model\n"
+    "Something I thought was very cool was that this decoupling of the architecture helps when people want to build a customized model; we have libraries, classes or pieces of code we can reuse; with the DataLoader class don't have to reinvent the wheel to create a class or method that help us load our data to our model\n"
    ]
   },
   {
@@ -1537,14 +1546,14 @@
    "source": [
     "\n",
     "### Accuracy and Loss\n",
-    "These are 2 concepts that as Jeremy explained in the course can often be confused because you could say reflect the same or very similar information that reflects the model performance.\n",
+    "These are 2 concepts that as Jeremy explained in the course can often be confused because both are a representation of our model performance.\n",
     "\n",
-    "* Accuracy could be represented as the *average* of correct predictions in a model.\n",
-    "* Loss could be represented as using the current learning rate, input and parameters for how much should we \"update\" (step) our weights to improve our predictions, think of it as the *penalty for making a bad prediction*.\n",
+    "* Accuracy usually represents the *average* of correct predictions in a model.\n",
+    "* Loss represents the rate of change of how much should we \"update\" (step) our weights to improve our predictions taking into account, the current learning rate, input and parameters for our model. Think of it as the *penalty for making a bad prediction*.\n",
     "\n",
     "The loss is used in *Gradient Descent* by the machine to understand with that *penalty* or “punishment” if the parameters should be updated or not depending on the result of the prediction; taking into account that the loss function will penalize/punish heavily on worse predictions or lightly on better predictions.\n",
     "\n",
-    "On the other hand *accuracy* is what helps us, humans, understand the performance of our model so that we can understand and make decisions on whether we should be altering [hyperparameters](https://machinelearningmastery.com/difference-between-a-parameter-and-a-hyperparameter/) used by the learning process (batch size, number of epochs) to improve the performance of our model.\n"
+    "On the other hand *accuracy* is used by us, humans, understand the performance of our model so that we can validate and make decisions on whether we should be altering the [hyperparameters](https://machinelearningmastery.com/difference-between-a-parameter-and-a-hyperparameter/) used by the learning process (batch size, number of epochs) to improve the performance of our model.\n"
    ]
   },
   {
@@ -1588,7 +1597,7 @@
     "\n",
     "### The Neural Network\n",
     "\n",
-    "Finally we have reached the moment to create our neural network. You will see that the network is actually not really complex and you might be surprised that its composed of 3 functions, and how much it can do with only those 3 layers Here is the entire definition of a neural net the function is actually small, and it has 3 different components:\n",
+    "Finally we have reached the moment to create our neural network. You will see that the definition of a network is actually not as complex we might think and you might be surprised (I was really surprised!!) that its composed of 3 functions, and how much it can do with only those 3 layers. Here is the definition of our very simple neural net, the function is actually small, and it has 3 different components:\n",
     "```\n",
     "simple_net(xb){\n",
     "  res = xb@w1 + b1\n",
@@ -1788,7 +1797,7 @@
     "\n",
     "### Visualizing Layer Features\n",
     "\n",
-    "In this final section we will use the parameters stored in our model and generate a small image. I loved this part of the exercise since it's where we can see how our network defines the features on the layer/s.\n",
+    "In this final section we will use the parameters stored in our model and generate a small image. *I loved this part of the exercise* since it's where we can \"see\" how our network defines the features on the layer/s.\n",
     "\n",
     "The *nn.Sequential* function used in our model stores the different functions in a list. We can use the index to grab the layer we want to use for the rendering (which is layer 0).\n",
     "\n",
