Enabled search on notebooks

--- a/_notebooks/2021-04-18-Resident-Evil-Detector.ipynb
+++ b/_notebooks/2021-04-18-Resident-Evil-Detector.ipynb
@@ -12,7 +12,7 @@
     "- comments: false\n",
     "- categories: [fastai, resident evil, vision]\n",
     "- hide: false\n",
-    "- search_exclude: true"
+    "- search_exclude: false"
    ]
   },
   {
