--- a/_notebooks/2021-05-08-The-MNIST-Experiment.ipynb
+++ b/_notebooks/2021-05-08-The-MNIST-Experiment.ipynb
@@ -16,7 +16,7 @@
     "- comments: false\n",
     "- categories: [fastai, vision]\n",
     "- hide: false\n",
-    "- search_exclude: true"
+    "- search_exclude: false"
    ]
   },
   {
